--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -84,7 +85,7 @@
         <activity
             android:name=".MapsMainActivity"
             android:label="@string/title_activity_maps_main"></activity>
-        <provider android:authorities="com.facebook.app.FacebookContentProvider{1733527306889936}"
+        <provider android:authorities="com.facebook.app.FacebookContentProvider1733527306889936"
             android:name="com.facebook.FacebookContentProvider"
             android:exported="true"/>
     </application>
