--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light"
-        android:banner.color='#81D8D0'>
+        android:theme="@style/AppTheme">
+
 
         <activity
             android:name=".StartActivity"
