--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -82,13 +84,18 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="1733527306889936"/>
+
         <activity
-            android:name=".MapsMainActivity"
-            android:label="@string/title_activity_maps_main"></activity>
-        <provider android:authorities="com.facebook.app.FacebookContentProvider1733527306889936"
+        android:name=".MapsMainActivity"
+        android:label="@string/title_activity_maps_main"></activity>
+        <provider
+            android:authorities="com.facebook.app.FacebookContentProvider1733527306889936"
             android:name="com.facebook.FacebookContentProvider"
             android:exported="true"/>
+        <activity
+            android:name="com.facebook.FacebookActivity"
+             />
     </application>
 
 </manifest>
