--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,14 @@
             android:name=".RecordDMBActivity"
             android:label="血糖紀錄"/>
 
+        <activity
+            android:name=".RecordDMCheckRegularActivity"
+            android:label="定期檢查"/>
+
+        <activity
+            android:name=".SettingRequestActivity"
+            android:label="回報問題"/>
+
 
 
 
