--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
-    compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.0@aar'
+    compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.0'
 }
