--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.+'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.0'
 }
