--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:23.1.0'
 }
