--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CareInfoActivity"
+            android:label="" />
+        <activity android:name=".CareInfoDetailActivity"
+            android:label=""/>
         <activity
             android:name=".ExitActivity"
             android:theme="@android:style/Theme.NoDisplay"
